# Z-Harness-coevolve

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/tb2_1_harness_only/: sft_drafts_crack_7z_hash_multiharness.jsonl  sft_drafts_crack_7z_hash_multiharness.jsonl.manifest.json
core/: __init__.py
core/llm/: __init__.py  base.py  gpt_sub2api_client.py  model_name.py  openrouter_newapi_client.py  tool_client_factory.py
docs/: 01_SYSTEM_ARCHITECTURE.md  02_RELATED_WORK.md  03_BENCHMARKS_AND_RESULTS.md  04_NEXT_PLAN.md  BENCHMARK_STRATEGY.md  CODEX_TARGET_TB21_H2_HARNESS_ONLY.md  DAILY_PLAN.md  DAY1_RESULT.md  DAY2_LEAKAGE_RESULT.md  DIRECTION.md  EXPERIMENT_PLAN.md  HARNESSX_REPRO_AND_MIGRATION_PLAN.md  HARNESSX_SIA_FLOW.md  HARNESSX_TB21_HARNESS_ONLY_ABLATION.md  HARNESSX_TB21_REPRO_REPORT.md  KGEN_INTERACTIVE_PROTOCOL.md  MODEL_AND_ENV_REVISIONS.md  QWEN8B_TRAINING_PLAN.md  README.md  RELATED_EXPERIMENTS.md  SERVER_BOOTSTRAP_TB21.md  SMOKE_RESULTS.md  SOURCES.md  TB21_PRETRAINING_READINESS.md  TERMINAL_BENCH_2_PLAN.md  TRAINING_PLAN.md
docs/archive/: PRIOR_RESULTS_SUMMARY.md
docs/result/: DAY10_MINIAPI_MEMORY_ADOPTION.md  DAY10_MINIAPI_SMOKE.md  DAY1_RESULT.md  DAY2_LEAKAGE_RESULT.md  DAY3_LEAKAGE_RESULT.md  DAY4_DAY6_API_REPORT.md  DAY8_INTERACTIVE_KGEN_SMOKE.md  (+3 more)
scripts/: check_llm.py  tb2_export_sft_candidates.py  tb2_export_sft_drafts.py  tb2_summarize_job.py
tests/: test_answer_parser.py  test_miniapi_env.py  test_minilang_env.py  test_project_direction.py  test_tb2_pretrain_prep.py  test_training_manifest.py
zharness/: __init__.py
(+35 files in other folders)
