[project]
name = "z-harness-coevolve"
version = "0.1.0"
description = "Quarantined scaffold adoption experiments for harness-model co-evolution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai==1.78.1",
    "httpx[socks]>=0.28.1",
    "python-dotenv>=1.1.1",
    "tenacity>=8.2.3,<9.0.0",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["zharness*", "core*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
